--- a/plugin.toml
+++ b/plugin.toml
@@ -1,7 +1,8 @@
-name = "Crankshaft Plugin Template"
+name = "TODO"
 version = "TODO"
 link = "TODO"
 source = "TODO"
+min-crankshaft-version = "0.1.5"
 
 [author]
 name = "TODO"
@@ -16,3 +17,4 @@ link = "TODO"
 	[entrypoints.deck]
 	library = false
 	menu = false
+	quick-access = false
