Use @crankshaft/types, update plugin.toml, and add readme

--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "esbuild": "^0.14.30",
-    "prettier": "^2.6.2",
-    "prettier-plugin-organize-imports": "^2.3.4",
-    "typescript": "^4.6.3"
+    "@crankshaft/types": "^0.2.2",
+    "esbuild": "^0.14.51",
+    "prettier": "^2.7.1",
+    "prettier-plugin-organize-imports": "^3.0.0",
+    "typescript": "^4.7.4"
   }
 }
