--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
-  "name": "crankshaft-plugin-template",
-  "version": "0.1.0",
+  "name": "crankshaft-spotify-playback-manager",
+  "version": "1.0.0",
   "main": "dist/index.js",
   "author": "",
   "license": "GPL-3.0",
   "private": true,
   "scripts": {
     "format": "prettier src --write",
-    "build": "esbuild src/index.ts --bundle --format=esm --outfile=dist/index.js",
-    "build-watch": "esbuild src/index.ts --bundle --format=esm --outfile=dist/index.js --watch"
+    "build": "esbuild src/index.tsx --bundle --format=esm --outfile=dist/index.js",
+    "build-watch": "esbuild src/index.tsx --bundle --format=esm --outfile=dist/index.js --watch"
   },
-  "dependencies": {},
+  "dependencies": {
+    "preact": "^10.10.1"
+  },
   "devDependencies": {
     "@crankshaft/types": "^0.2.2",
     "esbuild": "^0.14.51",
